--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ēdam kopā!</title>
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.css"> <!-- basic css -->
+	<link rel="stylesheet" href="css/media_style.css"> <!-- responsive css -->
 	<script type="text/javascript" src="js/js.js"></script> <!-- page navigation functions -->
 	<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script> <!-- Library -->
 </head>
@@ -13,40 +15,51 @@
 
 <nav id="navigator">
 	<div id="logo">
-		<a onclick="openmenu('one');return false;"> <img src="css/img/logo.png" alt="logo"/></a>
+		<a onclick="openmenu('one');return false;"> <img src="./img/logo.png" alt="logo"/></a>
 	</div>
-	<div>
+	<div id="menu">
 		<a href="#one" id="one" onclick="openmenu('one');return false;">Receptes</a>
 		<a id="logpop" onclick="logpop();return false;">Pieslēgties</a>	
 		<a href="#two" id="two" onclick="openmenu('two');return false;">Reģistrēties</a>
 		
-		<input id="search" type="name" name="name" placeholder="Meklēt...">
-		<button for="search" id="search_button" type="submit">
-			<img src="css/img/search-arrow.png" alt="search"/>
-		</button>
+		<div>
+			<input id="search" type="name" name="name" placeholder="Meklēt...">
+			<button for="search" id="search_button" type="submit">
+				<img src="./img/search-arrow.png" alt="search"/>
+			</button>
+		</div>
 	</div>
 </nav>
 
 <section>
 
 	<div  id="sec_one">
-		<div id="sec_one_1" class="sectionParting leftFloat minheight">
-			<h1>Jaunākās receptes: <h1>
+		<div id="sec_one_1" class="sectionParting leftFloat">
+			<h1>Jaunākās receptes: </h1>
 			
 			<div class="rec_small">
-				Pirmā recepte
+				<div class="rec_small_hover_off">
+					<div class="rec_small_image"></div>
+					<div class="rec_small_text">
+						<h2>Pirmā recepte</h2>
+						<p>Šī ir pati, pati, pati pirmā recepte!</p>
+					</div>
+				</div>
+				<div class="rec_small_hover_on">
+					<h2> oh hi! </h2>
+				</div>
 			</div>
 			
 			<div class="rec_small">
-				Otrā recepte
+				<h2>Otrā recepte</h2>
 			</div>
 			
 			<div class="rec_small">
-				Trešā recepte
+				<h2>Trešā recepte</h2>
 			</div>
 		 
 		</div>
-		<div id="sec_one_2" class="sectionParting leftFloat minheight">
+		<div id="sec_one_2" class="sectionParting leftFloat">
 			Filtri
 		 
 		</div>
@@ -74,17 +87,6 @@
 	</div>
 </section>
 
-<div id="copyright">
-	<table>
-		<tr>
-			<td><img src="css/img/minidino.png" alt="dino"/></td>
-		</tr>
-		<tr>
-			<td>&#169; 2013 Eklēram patīk autortiesības</td>
-		</tr>
-	</table>
-</div>
-
 <footer>
 	Very important text <span class="spanline">|</span> Cookies <span class="spanline">|</span> Banana <span class="spanline">|</span> I need get laid
 </footer>
@@ -104,4 +106,13 @@
 </div>
 
 <div id="logpop_overlay" class="hide" onclick="logpop();return false;"></div>
+
+<div id="copyright">
+	<table>
+		<tr>
+			<td><img src="./img/minidino.png" alt="dino"/></td>
+			<td>&#169; 2014 Eklēram patīk autortiesības</td>
+		</tr>
+	</table>
+</div>
 </html>
